2002-01-14  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/SocketChannel.java
	(read, write, close, flush): Don't retain a
	errorMsg member since it is not used anywhere
	and makes things more complex.

2002-01-08  Mo DeJong  <mdejong@users.sourceforge.net>

	* Makefile.in: Add JDB_ATTACH_FLAGS to deal
	with version specific arguments for jdb.
	Rework the jdb_jacl rule so that it uses
	these new command line arguments.
	* configure: Regen.
	* configure.in: Subst JDB_ATTACH_FLAGS.
	* tcljava.m4 (AC_JAVA_TOOLS): Set JAVA_G_FLAGS
	and JDB_ATTACH_FLAGS based on JDK version.
	If a java_g executable can't be found use
	the java executable in its place.

2002-01-08  Mo DeJong  <mdejong@users.sourceforge.net>

	* aclocal.m4: Removed.
	* configure: Regen with autoconf 2.52.
	* configure.in: Require autoconf 2.50 or newer.
	Directly include the tcljava.m4 file instead of
	including it via aclocal.m4.
	* tcljava.m4: Call m4_ifval instead of ifval
	to avoid errors from new version of autoconf.

2002-01-02  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/SocketCmd.java (cmdProc, getPort):
	Call new helper method to get port number passed in
	by the user and check that it is valid. Raise error
	if the port number is too large.

2002-01-02  Bruce Johnson  <bruce_johnson@merck.com>,
            Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/Channel.java (Channel, setEncoding):
	Add default constructor that will set the encoding at
	channel creation time. Move Tcl channel name logic into
	fconfigure command and call EncodingCmd.getBytesPerChar
	to cache the number of bytes per char for the channel.
	* src/jacl/tcl/lang/EncodingCmd.java: Add initial
	implementation of the encoding command.
	* src/jacl/tcl/lang/FconfigureCmd.java (cmdProc): Add
	logic to translate from Tcl encoding names to Java
	encoding names and vice versa.
	* src/jacl/tcl/lang/Interp.java (createCommands): Add
	encoding command to interp cmd table.
